# llvm-value-assertion

./: .gitignore  CMakeLists.txt  README.rst  build-and-install.sh  build.sh
cmake/modules/: AddLLVA.cmake
include/llva/: AssertInliner.h  Error.h  Helper.h  LLVA.h  Passes.h  passes.h
samples/: assert_eq_i32.ll  sample.ll  sample2.ll
src/: AssertInliner.cpp  CMakeLists.txt  Core.cpp  Passes.cpp  llva.cpp
tests/: assert_eq_i32.ll
tools/: CMakeLists.txt
tools/llva/: CMakeLists.txt  llva.cpp
